samples/_failures_safe/1761128445_00e572_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f2c59a7.c: In function ‘main’:
./samples/SAFE/__tmp_0f2c59a7.c:149:12: error: missing terminating " character
  149 |     printf("Processing input:
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0f2c59a7.c:149:5: error: expected expression at end of input
  149 |     printf("Processing input:
      |     ^~~~~~
./samples/SAFE/__tmp_0f2c59a7.c:149:5: error: expected declaration or statement at end of input
